--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -2,7 +2,7 @@
 FROM ubuntu
 
 # Maintainer: docker_user <docker_user at email.com> (@docker_user)
-MAINTAINER docker_user docker_user@email.com
+MAINTAINER docker_user lixiang3024@163.com
 
 # Commands to update the image
 RUN echo "deb http://mirrors.aliyun.com/ubuntu/ xenial main restricted universe multiverse" >> /etc/apt/sources.list
@@ -16,10 +16,10 @@ RUN echo "deb-src http://mirrors.aliyun.com/ubuntu/ xenial-updates main restrict
 RUN echo "deb-src http://mirrors.aliyun.com/ubuntu/ xenial-proposed main restricted universe multiverse" >> /etc/apt/sources.list
 RUN echo "deb-src http://mirrors.aliyun.com/ubuntu/ xenial-backports main restricted universe multiverse" >> /etc/apt/sources.list
 
-RUN apt-get update
+RUN apt update
 
 #修改系统时区
-apt-get install tzdata
+apt install tzdata
 #定义环境变量
 ENV TZ=Asia/Shanghai
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
@@ -28,3 +28,9 @@ RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 RUN apt install net-tools
 #ping
 RUN apt install iputils-ping
+#vim
+RUN apt install vim
+#ssh
+RUN apt install openssh-server
+#ftp
+RUN apt install vsftpd
