--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -2,7 +2,7 @@
 FROM ubuntu
 
 # Maintainer: docker_user <docker_user at email.com> (@docker_user)
-MAINTAINER docker_user docker_user@email.com
+MAINTAINER docker_user lixiang3024@163.com
 
 # Commands to update the image
 RUN echo "deb http://mirrors.aliyun.com/ubuntu/ xenial main restricted universe multiverse" >> /etc/apt/sources.list
@@ -19,18 +19,18 @@ RUN echo "deb-src http://mirrors.aliyun.com/ubuntu/ xenial-backports main restri
 RUN apt-get update && apt-get upgrade -yf
 
 #修改系统时区
-RUN apt install tzdata
+RUN apt-get install tzdata
 #定义环境变量
 ENV TZ=Asia/Shanghai
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 #安装必要的软件包
 
 #ifconfig 
-RUN apt install -y net-tools
+RUN apt-get install -y net-tools
 #ping
-RUN apt install -y iputils-ping
+RUN apt-get install -y iputils-ping
 #vim
-RUN apt install -y vim
+RUN apt-get install -y vim
 #ssh
 RUN apt-get install -y openssh-server
 #运行root用户登录
@@ -38,7 +38,7 @@ RUN sed -i 's/PermitRootLogin .*/PermitRootLogin yes/g' /etc/ssh/sshd_config
 CMD service ssh start
 #ftp
 #RUN apt install -y vsftpd
-write_enable=YES
 RUN sed -i 's/#write_enable=YES/write_enable=YES/g' /etc/vsftpd.conf
 RUN sed -i 's/#root/root/g' /etc/ftpusers
 CMD service vsftpd start
+
