--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -17,7 +17,10 @@ RUN echo "deb-src http://mirrors.aliyun.com/ubuntu/ xenial-proposed main restric
 RUN echo "deb-src http://mirrors.aliyun.com/ubuntu/ xenial-backports main restricted universe multiverse" >> /etc/apt/sources.list
 
 RUN apt-get update && apt-get upgrade -yf
-
+# 安装supervisor
+apt-get install -y supervisor
+# 修改root密码
+RUN echo 'root:8~W5!RAx?u6B'|chpasswd
 #修改系统时区
 RUN apt-get install tzdata
 #定义环境变量
@@ -33,15 +36,25 @@ RUN apt-get install -y iputils-ping
 RUN apt-get install -y vim
 #ssh
 RUN apt-get install -y openssh-server
+
 RUN mkdir /var/run/sshd
-RUN echo 'root:8~W5!RAx?u6B'|chpasswd
+
 RUN sed -ri 's/^#?PermitRootLogin\s+.*/PermitRootLogin yes/' /etc/ssh/sshd_config
 RUN sed -ri 's/UsePAM yes/#UsePAM yes/g' /etc/ssh/sshd_config
 RUN mkdir /root/.ssh
 RUN apt-get clean && \
     rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 EXPOSE 22
-CMD /usr/sbin/sshd -D &
+
+#采用进程管理工具实现镜像run时自动启动ssh服务
+RUN mkdir -p /var/log/supervisor
+RUN echo "[supervisord]" >> /etc/supervisord.conf
+RUN echo "nodaemon=true" >> /etc/supervisord.conf
+RUN echo "[program:sshd]" >> /etc/supervisord.conf
+RUN echo "command=/usr/sbin/sshd -D" >> /etc/supervisord.conf
+#启动supervisord服务
+CMD ["/usr/bin/supervisord"]
+
 #ftp
 #RUN apt install -y vsftpd
 #RUN sed -i 's/#write_enable=YES/write_enable=YES/g' /etc/vsftpd.conf
