--- a/web/supervisord.conf
+++ b/web/supervisord.conf
@@ -3,4 +3,4 @@ nodaemon=true
 [program:sshd]
 command=/usr/sbin/sshd -D
 [program:vsftpd]
-command=/usr/sbin/vsftpd -D
+command=service vsftpd restart
